line height and letter spacing fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,8 @@ h1 {
 
 p, li {
     font-size: 16px;
-    line-height: 1;
-    letter-spacing: 1px;
+    line-height: 2.5;
+    letter-spacing: 2px;
 }
 img {
     display: block;
